# dmpstat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  command_line.cpp  command_line.hpp  dmp_analyzer.cpp  main.cpp  mapped_file.cpp  mapped_file.hpp  mapped_view.cpp  mapped_view.hpp  pointer_counter.cpp  pointer_counter.hpp  segments.cpp  segments_report_template.html  symbol_resolver.cpp  symbol_resolver.hpp  token_fetcher.cpp  valcount.cpp  valfind.cpp  vcpkg.json
docs/: architecture.md  crcommit-design-session.md  memory-investigation-playbook.md  oilpan-heap-layout.md  v8-heap-layout.md
src/lib/: CMakeLists.txt  captured_memory_region.hpp  committed_regions.cpp  committed_regions.hpp  dump_memory.cpp  dump_memory.hpp  dump_memory_region.hpp  pointer_counter.cpp  pointer_counter.hpp  progress.cpp  progress.hpp  read_global.hpp  string_scanner.cpp  string_scanner.hpp  symbol_downloader.cpp  symbol_downloader.hpp  symbol_resolver.cpp  symbol_resolver.hpp  threads.cpp  threads.hpp  token_fetcher.hpp  wide_string_utils.cpp  wide_string_utils.hpp
src/tools/: CMakeLists.txt
src/tools/crcommit/: CMakeLists.txt  crcommit.cpp  oilpan_heap.cpp  oilpan_heap.hpp  oilpan_objects.cpp  oilpan_objects.hpp  v8_heap.cpp  v8_heap.hpp
src/tools/segments/: CMakeLists.txt  segments.cpp  segments_report.py
src/tools/valcount/: CMakeLists.txt  pointer_counter.hpp  valcount.cpp
src/tools/valfind/: CMakeLists.txt  valfind.cpp
